--- a/ConsoleApplication3/ConsoleApplication3.csproj
+++ b/ConsoleApplication3/ConsoleApplication3.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
+    <Compile Include="Konto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
